--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
     </nav>
   </div>
 
-
-  <div class="container p-5">
+  <div class="container p-3 text-center">
+      <div class="row">
+          <div class="col-12">
+            <h1>This is an example of a website.</h1>
+          </div>
+      </div>
+  </div>
+  <div class="container p-2">
     <div class="row">
       <div class="col-6">
         <div class="card" style="width: 18rem;">
@@ -81,8 +87,8 @@
 <footer class="page-footer">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright Nolan Harless:
-    <a href="https://github.com/NolanHarless/MyPortfolio"> GitHub Repository</a>
+  <div class="footer-copyright text-center py-3">© 2020 Copyright Group 3:
+    <a href="https://github.com/michaelcrawford35/icon-creation"> GitHub Repository</a>
   </div>
   <!-- Copyright -->
 
