--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
   <div class="container p-2">
     <div class="row">
-      <div class="col-6">
+      <div class="col-4">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="gnome-child.png" alt="Card image cap">
           <div class="card-body">
@@ -72,7 +72,17 @@
           </div>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-4">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="gnome-child.png" alt="Card image cap">
+          <div class="card-body">
+            <div id="card-2"><h5 class="card-title">{{message2}}</h5></div>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="gnome-child.png" alt="Card image cap">
           <div class="card-body">
